--- a/src/app/features/todo/todo.component.html
+++ b/src/app/features/todo/todo.component.html
@@ -9,9 +9,9 @@
     </form>
 
     <mat-selection-list class="todo-list">
-        <mat-list-option *ngFor="let todo of (todos$ | async)">
+        <mat-list-option *ngFor="let todo of todos$ | async">
             <div class="list-item">
-                <span>{{todo.title}}</span>
+                <span>{{todo?.title}}</span>
 
                 <button mat-icon-button (click)="onDeleteTodo($event, todo)">
                     <mat-icon color="warn">delete</mat-icon>
