--- a/src/app/features/todo/todo.component.html
+++ b/src/app/features/todo/todo.component.html
@@ -8,8 +8,8 @@
         </mat-form-field>
     </form>
 
-    <mat-selection-list class="todo-list">
-        <mat-list-option *ngFor="let todo of todos$ | async">
+    <mat-selection-list class="todo-list" (selectionChange)="onToggleTodo($event)">
+        <mat-list-option *ngFor="let todo of todos$ | async" [value]="todo" [selected]="todo.done">
             <div class="list-item">
                 <span>{{todo?.title}}</span>
 
